# UNESCO

./: .gitignore  .vercelignore  marketing text.html  package-lock.json  requirements.txt
app/: layout.tsx  page.tsx
app/course/: page.tsx
app/course-play/[id]/: page.tsx
backend/: .env  .gitignore  app.py  pyproject.toml  requirements.txt
backend/api/: index.py
backend/check_marketig/: handel_search.py  main.py  prompt_texts.py
backend/check_marketing/: main.py  prompt_texts.py  structures.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/certificate/: page.tsx
frontend/app/chats/: page.tsx
frontend/app/course/: page.tsx
frontend/app/course-play/: page.tsx
frontend/components/: certificate-generator.tsx  collapsible.tsx  header.tsx
frontend/public/data/: custom-style.css
frontend/public/data/module-1/: text-1-1.html  text-1-2.html  text-1-3.html
frontend/public/data/module-2/: text-2-1.html  text-2-2.html  text-2-3.html  text-2-4.html
frontend/public/data/module-3/: text-3-1.html  text-3-2.html  text-3-3.html  text-3-4.html  text-3-5.html  text-3-6.html  transcript-3-1.json
frontend/public/data/module-4/: text-4-1.html  text-4-2.html
frontend/public/data/module-5/: text-5-1.html
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AudioPlayer.tsx  Footer.tsx  Navbar.tsx  Quiz.tsx  TextContent.tsx  VideoPlayer.tsx  sidebar.tsx
frontend/src/data/: courseData.ts
frontend/src/types/: course.ts  youtube.d.ts
(+7 files in other folders)
